--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -49,12 +49,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: create release
-        uses: elgohr/Github-Release-Action@v5 
+        uses: ncipollo/release-action@v1
         env: 
           GITHUB_TOKEN: ${{ secrets.github_token }}
         with:
-          tag_name: ${{ github.run_number }}
-          release_name: Release from ${{ github.run_number }}
+          name: Release from ${{ github.run_number }}
           body: New release for ${{ github.sha }}. Release notes on the documentation site.
           draft: false
           prerelease: false
