--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -47,8 +47,10 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: create release
+        id: create-release
         uses: ncipollo/release-action@v1
         env: 
           GITHUB_TOKEN: ${{ secrets.github_token }}
@@ -58,4 +60,16 @@ jobs:
           body: New release for ${{ github.sha }}. Release notes on the documentation site.
           draft: false
           prerelease: false
-        
+      - name: download artefact
+        uses: actions/download-artifact@v4
+        with:
+          name: zipped-bundle
+      - name: upload release asset
+        uses: actions/upload-artifact@v4
+        env: 
+          GITHUB_TOKEN: ${{ secrets.github_token }}
+        with: 
+          upload_url: ${{ steps.create-release.outputs.upload_url }}
+          asset_path: ./${{ github.sha }}.zip
+          asset_name: source_code_with_libraries.zip
+          asset_content_type: application/zip
