--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -65,11 +65,11 @@ jobs:
         with:
           name: zipped-bundle
       - name: upload release asset
-        uses: actions/upload-artifact@v4
-        env: 
-          GITHUB_TOKEN: ${{ secrets.github_token }}
-        with: 
-          upload_url: ${{ steps.create-release.outputs.upload_url }}
-          asset_path: ./${{ github.sha }}.zip
-          asset_name: source_code_with_libraries.zip
-          asset_content_type: application/zip
+        uses: softprops/action-gh-release@v2
+        with:
+          files: ./${{ github.sha }}.zip
+          #name: source_code_with_libraries.zip
+          #path: ./${{ github.sha }}.zip
+
+          #upload_url: ${{ steps.create-release.outputs.upload_url }}
+          #asset_content_type: application/zip
