--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -68,7 +68,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: ./${{ github.sha }}.zip
-          tag: ${{ github.run_number }}
+          tag_name: ${{ github.run_number }}
           #name: source_code_with_libraries.zip
           #path: ./${{ github.sha }}.zip
 
